feat(core): delete folder toast

--- a/packages/frontend/i18n/src/resources/en.json
+++ b/packages/frontend/i18n/src/resources/en.json
@@ -1139,6 +1139,12 @@
   "com.affine.rootAppSidebar.organize.new-folders": "New Folder",
   "com.affine.rootAppSidebar.organize.delete": "Delete",
   "com.affine.rootAppSidebar.organize.delete-from-folder": "Remove from folder",
+  "com.affine.rootAppSidebar.organize.delete.notify-title": "Delete {{name}}",
+  "com.affine.rootAppSidebar.organize.delete.notify-message": "Delete the folder will not delete any docs, tags, or collections.",
+  "com.affine.rootAppSidebar.organize.move.notify-title": "Successfully added to {{to}}",
+  "com.affine.rootAppSidebar.organize.move.notify-message": "Add {{from}} to {{to}}",
+  "com.affine.rootAppSidebar.organize.link.notify-title": "Successfully linked to {{to}}",
+  "com.affine.rootAppSidebar.organize.link.notify-message": "Link {{from}} to {{to}}",
   "com.affine.rootAppSidebar.organize.root-folder-only": "Only folder can be placed on here",
   "com.affine.rootAppSidebar.tags": "Tags",
   "com.affine.rootAppSidebar.tags.empty": "No Tags",
