--- a/packages/frontend/i18n/src/resources/en.json
+++ b/packages/frontend/i18n/src/resources/en.json
@@ -1156,6 +1156,14 @@
   "com.affine.rootAppSidebar.explorer.drop-effect.link": "Link",
   "com.affine.rootAppSidebar.explorer.drop-effect.move": "Move",
   "com.affine.rootAppSidebar.explorer.drop-effect.copy": "Copy",
+  "com.affine.rootAppSidebar.explorer.tag-section-add-tooltip": "New Tag",
+  "com.affine.rootAppSidebar.explorer.tag-add-tooltip": "New Doc",
+  "com.affine.rootAppSidebar.explorer.fav-section-add-tooltip": "New Doc",
+  "com.affine.rootAppSidebar.explorer.organize-section-add-tooltip": "New Folder",
+  "com.affine.rootAppSidebar.explorer.organize-add-tooltip": "New Doc",
+  "com.affine.rootAppSidebar.explorer.collection-section-add-tooltip": "New Collection",
+  "com.affine.rootAppSidebar.explorer.collection-add-tooltip": "New Doc",
+  "com.affine.rootAppSidebar.explorer.doc-add-tooltip": "New Linked Doc",
   "com.affine.rootAppSidebar.docs.no-subdoc": "No linked docs",
   "com.affine.rootAppSidebar.favorites.empty": "No Favorites",
   "com.affine.rootAppSidebar.others": "Others",
